# sports_prediction

./: .gitignore  README.md  pyproject.toml
sports_prediction/: match_data_extractor.py  odds_data_extractor.py
